--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
                 <div class="headMenuItem" ng-click="toggleSound()" ng-class="relayAudio.soundMuted?'disabled':'enabled'"><i class="fa fa-volume-up" aria-hidden="true"></i></div>
                 <a class="login-lichess btn-border btn-big yellow" href="http://localhost:9090/login-with-lichess" ng-hide="relayChess.loggedIn">Login with Lichess</a>
                 <div class="headMenuUsername" ng-hide="relayChess.anonymousUser" ng-click="showProfile()">{{relayChess.playerInfo.displayName}}</div>
-                <div class="headMenuItem enabled" ng-hide="relayChess.anonymousUser" ng-click="logout()"><i class="fa fa-sign-out" aria-hidden="true"></i></div>
+                <a href="http://localhost:9090/logout" class="headMenuItem enabled" ng-hide="relayChess.anonymousUser"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
             </div>
         </div>
 
