Fix the display of active games

--- a/html/index.html
+++ b/html/index.html
@@ -106,7 +106,7 @@
                             <div style="display:flex; align-items: center; margin-left: 10px; margin-right: 20px; height: 50px;">
                                 <div style="flex:0 0 auto; text-align: left;">
                                     <div style="display:inline-block; color: #d5ac34;">{{game.white.title}}</div>
-                                    <div style="display:inline-block;">{{game.white.displayName}}</div>
+                                    <div style="display:inline-block;">{{game.white.name}}</div>
                                     <div style="display:inline-block;" ng-hide="game.white.rating=='?'"> ({{game.white.rating | asGlicko2}})</div>
                                 </div>
 
@@ -114,7 +114,7 @@
 
                                 <div style="flex:0 0 auto; text-align: left;">
                                     <div style="display:inline-block; color: #d5ac34;">{{game.black.title}}</div>
-                                    <div style="display:inline-block;">{{game.black.displayName}}</div>
+                                    <div style="display:inline-block;">{{game.black.name}}</div>
                                     <div style="display:inline-block;" ng-hide="game.black.rating=='?'"> ({{game.black.rating | asGlicko2}})</div>
                                 </div>
 
