Track and upgrade to Chessground 7.3.2

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,15 +7,15 @@
 
     <script src="https://use.fontawesome.com/34e85c6daf.js"></script>
 
-    <!-- Chessground Assets-->
-    <link rel="stylesheet" href="assets/base.css">
-    <link rel="stylesheet" href="assets/theme.css">
-    <link rel="stylesheet" href="assets/desktop.css">
+    <!-- Chessground Styles-->
+    <link rel="stylesheet" href="assets/chessground/chessground.css">
+    <link rel="stylesheet" href="assets/chessground/theme.css">
+    <link rel="stylesheet" href="assets/chessground/desktop.css">
 
+    <!-- RelayChess Styles  -->
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/forms.css">
     <link rel="stylesheet" href="styles/quotes.css">
-
     <link rel="stylesheet" href="styles/game.css">
     <link rel="stylesheet" href="styles/promote.css">
 
