Make the logo link to the homepage
A user would expect the giant logo to link back to the homepage.

At the moment, there is no way to get back to the homepage from
an AI game, so this would at least give some way to do so.

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -28,7 +28,7 @@
     <div class="torch right"></div>
 
     <div style="width: 960px;" class="center">
-      <div id="logo" style="display:inline-block" class="center"></div>
+      <a href="/" id="logo" style="display:inline-block" class="center"></a>
       <div class="headMenu" ng-cloak ng-controller="headMenuController">
         <div class="headMenuItem" ng-click="toggleMusic()" ng-class="relayAudio.musicMuted?'disabled':'enabled'"><i class="fa fa-music" aria-hidden="true"></i></div>
         <div class="headMenuItem" ng-click="toggleSound()" ng-class="relayAudio.soundMuted?'disabled':'enabled'"><i class="fa fa-volume-up" aria-hidden="true"></i></div>
